--- a/src/style.css
+++ b/src/style.css
@@ -168,9 +168,8 @@ button:focus-visible {
   max-height: 100vh;
 }
 
-
+/* 
 .webcam-input video {
-  /* display: block; */
   transform: rotateY(180deg);
   -webkit-transform: rotateY(180deg);
   -moz-transform: rotateY(180deg);
@@ -179,6 +178,18 @@ button:focus-visible {
   max-width: 100%;
   height: calc(50vh - 25px);
   max-height: calc(50vh - 25px);
+} */
+
+.webcam-input video {
+  display: none;
+}
+
+.webcam-input canvas {
+  width: 500px;
+  height: 400px;
+  max-width: 100%;
+  max-height: 100%;
+  position: relative;
 }
 
 /*
