--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@
 }
 
 * {
-  box-sizing: content-box;
+  box-sizing: border-box;
 }
 
 a {
@@ -210,7 +210,7 @@ button:focus-visible {
 .app-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: flex-start;
   width: 100vw;
   max-width: 100%;
@@ -234,9 +234,11 @@ button:focus-visible {
 .game-row {
   height: calc(100vh - 300px);
   max-height: 100%;
-  width: 100vw;
+  width: 100%;
   max-width: 100%;
   overflow: hidden;
+  position: relative;
+  padding: 0 0.5rem;
 }
 
 .game-container {
@@ -344,3 +346,69 @@ button:focus-visible {
 .hide {
   display: none;
 }
+
+
+@media screen and (orientation:landscape) and (min-device-width: 319px) and (max-device-width: 1000px) {
+
+  /* Your CSS Here*/
+  .app-container {}
+
+  .input-container {
+    width: 50%;
+    height: 100%;
+    max-height: 100%;
+    flex-direction: column;
+  }
+
+  .input-config {
+
+  }
+
+  .webcam-input {
+    height: 50vh;
+    max-height: 100%;
+    width: 100%;
+    max-width: 100%;
+  }
+
+  .webcam-input .webcam-render {
+
+  }
+
+  .game-row {
+    width: 50%;
+    height: 100%;
+  }
+}
+
+
+
+.lds-dual-ring,
+.lds-dual-ring:after {
+  box-sizing: border-box;
+}
+.lds-dual-ring {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+}
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6.4px solid currentColor;
+  border-color: currentColor transparent currentColor transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
