--- a/src/style.css
+++ b/src/style.css
@@ -224,8 +224,8 @@ button:focus-visible {
   justify-content: space-around;
   align-items: center;
 
-  width: 100%;
-  max-width: 100%;
+  /* width: 100%; */
+  /* max-width: 100%; */
   position: relative;
   height: 200px;
   max-height: 25vh;
@@ -238,14 +238,16 @@ button:focus-visible {
   max-width: 100%;
   overflow: hidden;
   position: relative;
-  padding: 0 0.5rem;
 }
 
 .game-container {
   position: relative;
   height: 100%;
   max-height: 100%;
-  width: 100%;
+}
+
+.game-container, .input-container {
+  width: 750px;
   max-width: 100%;
 }
 
@@ -259,7 +261,6 @@ button:focus-visible {
 }
 
 .input-config {
-  width: 100%;
   display: inline-flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -347,7 +348,9 @@ button:focus-visible {
   display: none;
 }
 
-
+/**
+* Mobile Landscape
+*/
 @media screen and (orientation:landscape) and (min-device-width: 319px) and (max-device-width: 1000px) {
 
   /* Your CSS Here*/
@@ -377,6 +380,44 @@ button:focus-visible {
 
   .game-row {
     width: 50%;
+    height: 100%;
+  }
+}
+
+
+/**
+* Mobile Portrait
+*/
+@media screen and (orientation:portrait) and (min-device-width: 200px) and (max-device-width: 1000px) {
+
+  /* Your CSS Here*/
+  .app-container {}
+
+  .input-container {
+    width: 100%;
+    height: 100%;
+    max-height: 25vh;
+    flex-direction: row;
+    padding: 0.25rem;
+  }
+
+  .input-config {
+
+  }
+
+  .webcam-input {
+    height: 25vh;
+    max-height: 100%;
+    width: 100%;
+    max-width: 100%;
+  }
+
+  .webcam-input .webcam-render {
+
+  }
+
+  .game-row {
+    width: 100%;
     height: 100%;
   }
 }
